# cpp

kt1/: .gitignore  CMakeLists.txt  main.cpp
kt2/: CMakeLists.txt  main.cpp
kt21/: Game.cpp  Game.h
kt2esi/: CMakeLists.txt  main.cpp
kt3/: CMakeLists.txt  main.cpp
kt4/: CMakeLists.txt  main.cpp
kt4uus/: CMakeLists.txt
kt5/: CMakeLists.txt  main.cpp
kt6/: CMakeLists.txt  main.cpp
kt7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
kt72/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
